fix jump func

--- a/src/containers/game/game.module.css
+++ b/src/containers/game/game.module.css
@@ -121,5 +121,6 @@
 }
 
 .controls .jump {
-	
+	width: 60px;
+	height: 30px;
 }
